internal/mpt-crypto-sys/vendor/include/utility/mpt_utility.h

/**
 * @brief Represents a participant in a Confidential Send transaction.
 *
 * - pubkey: The 33-byte compressed secp256k1 public key.
 * - ciphertext: The 66-byte ElGamal encrypted amount.
 */
typedef struct mpt_confidential_participant
{
    uint8_t pubkey[kMPT_PUBKEY_SIZE];
    uint8_t ciphertext[kMPT_ELGAMAL_TOTAL_SIZE];
} mpt_confidential_participant;
/**
 * @brief Generates proof for ConfidentialMPTClawback.
 * @param priv         [in] The issuer's 32-byte private key.
 * @param pub          [in] The issuer's 33-byte compressed public key.
 * @param context_hash [in] The 32-byte context hash binding the proof to the transaction.
 * @param amount       [in] The publicly known amount to be clawed back.
 * @param ciphertext   [in] The 66-byte sfIssuerEncryptedBalance blob from the ledger.
 * @param out_proof    [out] 64-byte buffer for the compact sigma proof.
 * @return 0 on success, -1 on failure.
 */
int
mpt_get_clawback_proof(
    uint8_t const priv[kMPT_PRIVKEY_SIZE],
    uint8_t const pub[kMPT_PUBKEY_SIZE],
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE],
    uint64_t const amount,
    uint8_t const ciphertext[kMPT_ELGAMAL_TOTAL_SIZE],
    uint8_t out_proof[SECP256K1_COMPACT_CLAWBACK_PROOF_SIZE]);
/* ============================================================================
 * Non-ZKP Validation
 * ============================================================================ */

/**
 * @brief Verifies that the ElGamal ciphertexts held by all participants encrypt
 * the same revealed plaintext amount under the given blinding factor.
 *
 * @param amount          [in] Actual numeric amount to verify against.
 * @param blinding_factor [in] The ElGamal randomness r used to produce all ciphertexts.
 * @param holder          [in] Holder's public key and ciphertext.
 * @param issuer          [in] Issuer's public key and ciphertext.
 * @param auditor         [in] Auditor's public key and ciphertext, optional.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_revealed_amount(
    uint64_t const amount,
    uint8_t const blinding_factor[kMPT_BLINDING_FACTOR_SIZE],
    mpt_confidential_participant const* holder,
    mpt_confidential_participant const* issuer,
    mpt_confidential_participant const* auditor);
/* ============================================================================
 * ZKProof Verifications for Each Transaction
 * ============================================================================ */

/**
 * @brief Verify proof for ConfidentialMPTConvert.
 *
 * Proves that the sender possesses the private key for the provided public key.
 *
 * @param proof        [in] The 64-byte compact Schnorr proof.
 * @param pubkey       [in] The 33-byte compressed ElGamal public key.
 * @param context_hash [in] The 32-byte transaction context hash.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_convert_proof(
    uint8_t const proof[kMPT_SCHNORR_PROOF_SIZE],
    uint8_t const pubkey[kMPT_PUBKEY_SIZE],
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);
/**
 * @brief Verify proof for ConfidentialMPTConvertBack
 *
 * Proves that the hidden balance matches the commitment and that
 * subtracting the transparent amount results in a non-negative balance.
 *
 * @param proof              [in] 816-byte proof blob (compact sigma || Bulletproof).
 * @param pubkey             [in] The holder's 33-byte ElGamal public key.
 * @param ciphertext         [in] The holder's 66-byte balance ciphertext.
 * @param balance_commitment [in] The 33-byte Pedersen commitment to the balance.
 * @param amount             [in] The publicly revealed conversion amount m.
 * @param context_hash       [in] The 32-byte transaction context hash.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_convert_back_proof(
    uint8_t const proof[SECP256K1_COMPACT_CONVERTBACK_PROOF_SIZE + kMPT_SINGLE_BULLETPROOF_SIZE],
    uint8_t const pubkey[kMPT_PUBKEY_SIZE],
    uint8_t const ciphertext[kMPT_ELGAMAL_TOTAL_SIZE],
    uint8_t const balance_commitment[kMPT_PEDERSEN_COMMIT_SIZE],
    uint64_t const amount,
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);
/**
 * @brief Verify proof for ConfidentialMPTSend.
 *
 * Verifies the compact AND-composed sigma proof (first 192 bytes) that proves
 * ciphertext correctness, Pedersen commitment linkage, and balance ownership,
 * followed by an aggregated Bulletproof range proof (next 754 bytes).
 * Proof size is fixed at 946 bytes.
 *
 * @param proof                      [in] 946-byte proof blob (compact sigma || Bulletproof).
 * @param participants               [in] List of participants' public keys and ciphertexts.
 *                                        participants[0] is the sender.
 * @param n_participants             [in] Number of participants (3 or 4).
 * @param sender_spending_ciphertext [in] The sender's on-ledger balance ciphertext (b1||b2).
 * @param amount_commitment          [in] Pedersen commitment pc_m to the transfer amount.
 * @param balance_commitment         [in] Pedersen commitment pc_b to the sender's balance.
 * @param context_hash               [in] The 32-byte transaction context hash.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_send_proof(
    uint8_t const* proof,
    mpt_confidential_participant const* participants,
    uint8_t const n_participants,
    uint8_t const sender_spending_ciphertext[kMPT_ELGAMAL_TOTAL_SIZE],
    uint8_t const amount_commitment[kMPT_PEDERSEN_COMMIT_SIZE],
    uint8_t const balance_commitment[kMPT_PEDERSEN_COMMIT_SIZE],
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);
/**
 * @brief Verify proof for ConfidentialMPTClawback.
 *
 * Proves that a ciphertext, when decrypted by the issuer, results in exactly the plaintext amount
 * specified in the transaction.
 *
 * @param proof        [in] The 64-byte compact sigma proof.
 * @param amount       [in] The publicly known amount to be clawed back.
 * @param pubkey       [in] The issuer's 33-byte compressed public key.
 * @param ciphertext   [in] The 66-byte sfIssuerEncryptedBalance blob associated with the holder's
 *                         account on the ledger.
 * @param context_hash [in] The 32-byte transaction context hash.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_clawback_proof(
    uint8_t const proof[SECP256K1_COMPACT_CLAWBACK_PROOF_SIZE],
    uint64_t const amount,
    uint8_t const pubkey[kMPT_PUBKEY_SIZE],
    uint8_t const ciphertext[kMPT_ELGAMAL_TOTAL_SIZE],
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);
/**
 * @brief Helper function to substract a transparent amount from a hidden commitment.
 *
 * @param commitment_in  [in] The 33-byte starting Pedersen commitment.
 * @param amount         [in] The integer amount to subtract.
 * @param commitment_out [out] The resulting 33-byte remainder commitment.
 * @return 0 on success, -1 on failure.
 */
int
mpt_compute_convert_back_remainder(
    uint8_t const commitment_in[kMPT_PEDERSEN_COMMIT_SIZE],
    uint64_t amount,
    uint8_t commitment_out[kMPT_PEDERSEN_COMMIT_SIZE]);
/**
 * @brief Generic verifier for aggregated Bulletproofs (Range Proofs).
 *
 * @param proof                  [in] The serialized Bulletproof buffer.
 * @param proof_len              [in] The length of the proof buffer in bytes.
 * @param compressed_commitments [in] An array of pointers to the 33-byte Pedersen commitments.
 * @param m                      [in] The number of commitments to verify.
 * @param context_hash           [in] The 32-byte context hash binding the proof to the transaction.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_aggregated_bulletproof(
    uint8_t const* proof,
    size_t proof_len,
    uint8_t const** compressed_commitments,
    size_t m,
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);
/**
 * @brief Verifies that the sending amount and remaining balance reside within the valid range from
 * 0 to 2^64-1.
 *
 * @param ctx                [in] secp256k1-zkp context.
 * @param proof              [in] 754-byte Double Bulletproof.
 * @param amount_commitment  [in] Pedersen commitment to the transfer amount.
 * @param balance_commitment [in] Pedersen commitment to the sender's total balance.
 * @param context_hash       [in] 32-byte transaction context hash.
 * @return 0 on success, -1 on failure.
 */
int
mpt_verify_send_range_proof(
    uint8_t const proof[kMPT_DOUBLE_BULLETPROOF_SIZE],
    uint8_t const amount_commitment[kMPT_PEDERSEN_COMMIT_SIZE],
    uint8_t const balance_commitment[kMPT_PEDERSEN_COMMIT_SIZE],
    uint8_t const context_hash[kMPT_HALF_SHA_SIZE]);