internal/mpt-crypto-sys/src/bindings.rs

unsafe extern "C" {
    #[doc = " @brief Generates proof for ConfidentialMPTClawback.\n @param priv         [in] The issuer's 32-byte private key.\n @param pub          [in] The issuer's 33-byte compressed public key.\n @param context_hash [in] The 32-byte context hash binding the proof to the transaction.\n @param amount       [in] The publicly known amount to be clawed back.\n @param ciphertext   [in] The 66-byte sfIssuerEncryptedBalance blob from the ledger.\n @param out_proof    [out] 64-byte buffer for the compact sigma proof.\n @return 0 on success, -1 on failure."]
    pub fn mpt_get_clawback_proof(
        priv_: *const u8,
        pub_: *const u8,
        context_hash: *const u8,
        amount: u64,
        ciphertext: *const u8,
        out_proof: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verifies that the ElGamal ciphertexts held by all participants encrypt\n the same revealed plaintext amount under the given blinding factor.\n\n @param amount          [in] Actual numeric amount to verify against.\n @param blinding_factor [in] The ElGamal randomness r used to produce all ciphertexts.\n @param holder          [in] Holder's public key and ciphertext.\n @param issuer          [in] Issuer's public key and ciphertext.\n @param auditor         [in] Auditor's public key and ciphertext, optional.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_revealed_amount(
        amount: u64,
        blinding_factor: *const u8,
        holder: *const mpt_confidential_participant,
        issuer: *const mpt_confidential_participant,
        auditor: *const mpt_confidential_participant,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verify proof for ConfidentialMPTConvert.\n\n Proves that the sender possesses the private key for the provided public key.\n\n @param proof        [in] The 64-byte compact Schnorr proof.\n @param pubkey       [in] The 33-byte compressed ElGamal public key.\n @param context_hash [in] The 32-byte transaction context hash.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_convert_proof(
        proof: *const u8,
        pubkey: *const u8,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verify proof for ConfidentialMPTConvertBack\n\n Proves that the hidden balance matches the commitment and that\n subtracting the transparent amount results in a non-negative balance.\n\n @param proof              [in] 816-byte proof blob (compact sigma || Bulletproof).\n @param pubkey             [in] The holder's 33-byte ElGamal public key.\n @param ciphertext         [in] The holder's 66-byte balance ciphertext.\n @param balance_commitment [in] The 33-byte Pedersen commitment to the balance.\n @param amount             [in] The publicly revealed conversion amount m.\n @param context_hash       [in] The 32-byte transaction context hash.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_convert_back_proof(
        proof: *const u8,
        pubkey: *const u8,
        ciphertext: *const u8,
        balance_commitment: *const u8,
        amount: u64,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verify proof for ConfidentialMPTSend.\n\n Verifies the compact AND-composed sigma proof (first 192 bytes) that proves\n ciphertext correctness, Pedersen commitment linkage, and balance ownership,\n followed by an aggregated Bulletproof range proof (next 754 bytes).\n Proof size is fixed at 946 bytes.\n\n @param proof                      [in] 946-byte proof blob (compact sigma || Bulletproof).\n @param participants               [in] List of participants' public keys and ciphertexts.\n                                        participants[0] is the sender.\n @param n_participants             [in] Number of participants (3 or 4).\n @param sender_spending_ciphertext [in] The sender's on-ledger balance ciphertext (b1||b2).\n @param amount_commitment          [in] Pedersen commitment pc_m to the transfer amount.\n @param balance_commitment         [in] Pedersen commitment pc_b to the sender's balance.\n @param context_hash               [in] The 32-byte transaction context hash.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_send_proof(
        proof: *const u8,
        participants: *const mpt_confidential_participant,
        n_participants: u8,
        sender_spending_ciphertext: *const u8,
        amount_commitment: *const u8,
        balance_commitment: *const u8,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verify proof for ConfidentialMPTClawback.\n\n Proves that a ciphertext, when decrypted by the issuer, results in exactly the plaintext amount\n specified in the transaction.\n\n @param proof        [in] The 64-byte compact sigma proof.\n @param amount       [in] The publicly known amount to be clawed back.\n @param pubkey       [in] The issuer's 33-byte compressed public key.\n @param ciphertext   [in] The 66-byte sfIssuerEncryptedBalance blob associated with the holder's\n                         account on the ledger.\n @param context_hash [in] The 32-byte transaction context hash.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_clawback_proof(
        proof: *const u8,
        amount: u64,
        pubkey: *const u8,
        ciphertext: *const u8,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Helper function to substract a transparent amount from a hidden commitment.\n\n @param commitment_in  [in] The 33-byte starting Pedersen commitment.\n @param amount         [in] The integer amount to subtract.\n @param commitment_out [out] The resulting 33-byte remainder commitment.\n @return 0 on success, -1 on failure."]
    pub fn mpt_compute_convert_back_remainder(
        commitment_in: *const u8,
        amount: u64,
        commitment_out: *mut u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Generic verifier for aggregated Bulletproofs (Range Proofs).\n\n @param proof                  [in] The serialized Bulletproof buffer.\n @param proof_len              [in] The length of the proof buffer in bytes.\n @param compressed_commitments [in] An array of pointers to the 33-byte Pedersen commitments.\n @param m                      [in] The number of commitments to verify.\n @param context_hash           [in] The 32-byte context hash binding the proof to the transaction.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_aggregated_bulletproof(
        proof: *const u8,
        proof_len: usize,
        compressed_commitments: *mut *const u8,
        m: usize,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " @brief Verifies that the sending amount and remaining balance reside within the valid range from\n 0 to 2^64-1.\n\n @param ctx                [in] secp256k1-zkp context.\n @param proof              [in] 754-byte Double Bulletproof.\n @param amount_commitment  [in] Pedersen commitment to the transfer amount.\n @param balance_commitment [in] Pedersen commitment to the sender's total balance.\n @param context_hash       [in] 32-byte transaction context hash.\n @return 0 on success, -1 on failure."]
    pub fn mpt_verify_send_range_proof(
        proof: *const u8,
        amount_commitment: *const u8,
        balance_commitment: *const u8,
        context_hash: *const u8,
    ) -> ::std::os::raw::c_int;
}
